# volatility

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_ENHANCED.md  README_PROJECT.md  SECURITY.md  build_output.txt  index.html  main.cpp  verification_script.md
.github/workflows/: ci.yml
assets/: LocalVolPage-BKQ59YnY.js  LocalVolPage-BKQ59YnY.js.map  LocalVolPage-Cu_3wULA.js  LocalVolPage-Cu_3wULA.js.map  LocalVolPage-DnMC0zR8.js  LocalVolPage-DnMC0zR8.js.map  LocalVolSurface-0qXVhEMa.js  LocalVolSurface-0qXVhEMa.js.map  LocalVolSurface-CBa6NvtC.js  LocalVolSurface-CBa6NvtC.js.map  LocalVolSurface-CiXPRN8J.js  LocalVolSurface-CiXPRN8J.js.map  SurfaceViewerPage-B6ojjhFO.js  SurfaceViewerPage-B6ojjhFO.js.map  SurfaceViewerPage-DdpVR56W.js  SurfaceViewerPage-DdpVR56W.js.map  SurfaceViewerPage-WImijAdB.js  SurfaceViewerPage-WImijAdB.js.map  index-BmR7JZCM.js  index-BmR7JZCM.js.map  index-CNCn7y_M.js  index-CNCn7y_M.js.map  index-CZtC98_Q.js  index-CZtC98_Q.js.map  index-CszEQa2g.css  index-WthxC7GN.css  react-vendor-BxlYYZu9.js  react-vendor-C36S1XXY.js  react-vendor-J4_BWPKe.js  switch-CwKF6Awa.js  switch-CwKF6Awa.js.map  switch-DZxODNGE.js  switch-DZxODNGE.js.map  switch-miFcR2lf.js  switch-miFcR2lf.js.map  ui-vendor-BB5qy5Fy.js  ui-vendor-BB5qy5Fy.js.map  ui-vendor-CqxS6VTc.js  ui-vendor-CqxS6VTc.js.map  ui-vendor-FWowRp9v.js  (+1 more)
data/: fetch_spy.py
include/: arbitrage_detector.hpp  config_manager.hpp  data_handler.hpp  dual_certificate.hpp  local_vol.hpp  logger.hpp  memory_pool.hpp  optimization_hints.hpp  profit_advisor.hpp  qp_solver.hpp  simd_math.hpp  svi_surface.hpp  test_framework.hpp  upstox_client.hpp  validation.hpp  vol_api.hpp  vol_surface.hpp
src/: api_server_main.cpp  arbitrage_detector.cpp  benchmark_main.cpp  config_manager.cpp  data_handler.cpp  dual_certificate.cpp  local_vol.cpp  logger.cpp  profit_advisor.cpp  qp_solver.cpp  svi_surface.cpp  test_framework.cpp  upstox_client.cpp  vol_api.cpp  vol_surface.cpp
tests/: comprehensive_tests.cpp  test_butterfly.cpp  test_main.cpp
tests/edge_cases/: test_edge_cases.cpp
tests/integration/: test_integration.cpp
tests/performance/: test_benchmarks.cpp
tests/regression/: test_regression.cpp
tests/stress/: test_stress.cpp
tests/thread_safety/: test_thread_safety.cpp
tests/unit/: test_arbitrage_detector.cpp  test_black_scholes.cpp  test_qp_solver.cpp
